# discord-over-telegram

./: .gitignore  LICENSE  README.md  __main__.py  app.py  data.db  main.py  pyproject.toml  requirements.txt  start.sh
clients/: discord.py  telegram.py
core/: bridge.py
discord_over_telegram/: __init__.py  bridge.py  bridge_manager.py  utils.py
discord_over_telegram/clients/: __init__.py  discord.py  telegram.py
discord_over_telegram/storage/: __init__.py  base.py  shelve.py
examples/complex/: main.py
examples/simple/: main.py  requirements.txt
services/: __init__.py  database.py
